--- a/Back-End/requirements.txt
+++ b/Back-End/requirements.txt
@@ -25,6 +25,7 @@ typing-extensions==4.8.0
 
 # Logging y monitoreo
 loguru==0.7.2
+python-json-logger==2.0.7
 
 # Cliente HTTP para testing
 httpx==0.25.2
