--- a/Front-End/.env.development
+++ b/Front-End/.env.development
@@ -1,5 +1,5 @@
 # Variables de entorno para desarrollo
-VITE_API_URL=http://localhost:8000/api/v1
+VITE_API_BASE_URL=http://localhost:8000
 VITE_API_TIMEOUT=10000
 VITE_APP_NAME=WEB-LIS PathSys
 VITE_APP_VERSION=2.0.0
