--- a/Back-End/requirements.txt
+++ b/Back-End/requirements.txt
@@ -1,12 +1,13 @@
 # FastAPI y dependencias principales
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi==0.117.1
+uvicorn[standard]==0.32.1
 pydantic==2.10.0
 pydantic-settings==2.1.0
 
 # Base de datos MongoDB
-motor==3.3.2
-pymongo==4.6.0
+motor==3.7.1
+pymongo==4.15.1
+dnspython==2.7.0
 
 # Autenticación y seguridad
 python-jose[cryptography]==3.3.0
@@ -14,7 +15,7 @@ passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 
 # CORS y middleware
-starlette==0.27.0
+starlette==0.40.0
 
 # Validación de email
 email-validator==2.1.0
