--- a/Back-End/requirements.txt
+++ b/Back-End/requirements.txt
@@ -12,6 +12,7 @@ dnspython==2.7.0
 # Autenticación y seguridad
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+argon2-cffi==23.1.0
 python-multipart==0.0.6
 
 # CORS y middleware
