--- a/Back-End/.env
+++ b/Back-End/.env
@@ -1,6 +1,6 @@
-MONGODB_URL=mongodb://localhost:27017
+MONGODB_URL=mongodb+srv://practicantedoslime:xC4Nmj3LDU3t89HJ@cluster0.dujsqez.mongodb.net/
 DATABASE_NAME=lime_pathsys
-ENVIRONMENT=development
-DEBUG=True
-SECRET_KEY=dev-secret-key-please-change-in-prod-32-chars-min
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+ENVIRONMENT=production
+DEBUG=False
+SECRET_KEY=your-production-secret-key-change-this
+ACCESS_TOKEN_EXPIRE_MINUTES=240
