--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -13,6 +13,7 @@
     "@heroicons/vue": "^2.2.0",
     "apexcharts": "^5.3.5",
     "axios": "^1.12.2",
+    "date-holidays": "^3.0.0",
     "pdfjs-dist": "^5.4.149",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
